Setup button size and border-radius

--- a/example/index.html
+++ b/example/index.html
@@ -5,9 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSS Pack</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700|Roboto:300,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+  <div class="content">
+    <div class="header">
+      <h2 class="header__title">Buttons</h2>
+      <p class="header__info">Buttons will have several combinable variables to use for complete customization.</p>    
+    </div>
+
+    <div class="section">
+      <h4 class="subheader">Size</h4>
+      <div class="buttons">
+        <button class="btn btn-xs">Extra Small</button>
+        <button class="btn btn-sm">Small</button>
+        <button class="btn btn-md">Medium</button>
+        <button class="btn btn-lg">Large</button>
+        <button class="btn btn-xl">Extra Large</button>
+      </div>
+    </div>
+
+    <div class="section">
+      <h4 class="subheader">Border-Radius</h4>
+      <div class="buttons">
+        <button class="btn btn-md btn-br-1">Level 1</button>
+        <button class="btn btn-md btn-br-2">Level 2</button>
+        <button class="btn btn-md btn-br-3">Level 3</button>
+        <button class="btn btn-md btn-br-4">Level 4</button>
+        <button class="btn btn-md btn-br-5">Level 5</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
