Setup solid/outline buttons

--- a/example/index.html
+++ b/example/index.html
@@ -36,6 +36,14 @@
         <button class="btn btn-md btn-br-5">Level 5</button>
       </div>
     </div>
+
+    <div class="section">
+      <h4 class="subheader">Solid/Outline</h4>
+      <div class="buttons">
+        <button class="btn btn-md btn-solid">Solid</button>
+        <button class="btn btn-md btn-outline">Outline</button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
