Setup button animations - mostly

--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@
   <div class="content">
     <div class="header">
       <h2 class="header__title">Buttons</h2>
-      <p class="header__info">Buttons will have several combinable variables to use for complete customization.</p>    
+      <p class="header__info">Buttons have several combinable variables to use for complete customization.</p>    
     </div>
 
     <div class="section">
@@ -42,6 +42,18 @@
       <div class="buttons">
         <button class="btn btn-md btn-solid">Solid</button>
         <button class="btn btn-md btn-outline">Outline</button>
+      </div>
+    </div>
+
+    <div class="section">
+      <h4 class="subheader">Animations</h4>
+      <div class="buttons">
+        <button class="btn btn-md btn-ani-opp">Opposite</button>
+        <button class="btn btn-md btn-ani-raise">Raise</button>
+        <button class="btn btn-md btn-ani-switch">
+          <span class="btn-ani-switch-visible">Switch</span>
+          <span class="btn-ani-switch-hidden">&#8594;</span>
+        </button>
       </div>
     </div>
   </div>
