--- a/example/index.html
+++ b/example/index.html
@@ -57,5 +57,24 @@
       </div>
     </div>
   </div>
+
+  <div class="content">
+    <div class="header">
+      <h2 class="header__title">Container</h2>
+      <p class="header__info">A simple class to wrap components in to keep 
+        everything positioned well.
+      </p>    
+    </div>
+    
+    <div class="section">
+      <div class="container">
+        <div class="container__contents">
+          <h4 class="container__header">
+            Play around with the screen sizing to get a feel for the container's responsiveness.
+          </h4>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
