--- a/example/index.html
+++ b/example/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSS Pack</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700|Roboto:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto:300,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <div class="content">
-    <div class="header">
-      <h2 class="header__title">Buttons</h2>
-      <p class="header__info">Buttons have several combinable variables to use for complete customization.</p>    
+    <div class="content__header">
+      <h2 class="content__title">Buttons</h2>
+      <p class="content__info">Buttons have several combinable variables to use for complete customization.</p>    
     </div>
 
     <div class="section">
@@ -59,9 +59,9 @@
   </div>
 
   <div class="content">
-    <div class="header">
-      <h2 class="header__title">Container</h2>
-      <p class="header__info">A simple class to wrap components in to keep 
+    <div class="content__header">
+      <h2 class="content__title">Container</h2>
+      <p class="content__info">A simple class to wrap components in to keep 
         everything positioned well.
       </p>    
     </div>
@@ -72,6 +72,31 @@
           <h4 class="container__header">
             Play around with the screen sizing to get a feel for the container's responsiveness.
           </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="content">
+    <div class="content__header">
+      <h2 class="content__title">Headers</h2>
+      <p class="content__info">
+        Some awesome headers sure to grab user attention.
+      </p>
+      <div class="headers">
+        <div class="headers__left">
+          <h4 class="header-light-1">Header Light 1</h4>
+          <h4 class="header-light-2">Header Light 2</h4>
+          <h4 class="header-light-3">Header Light 3</h4>
+          <h4 class="header-light-4">Header Light 4</h4>
+          <h4 class="header-light-5">Header Light 5</h4>
+        </div>
+        <div class="headers__right">
+          <h4 class="header-dark-1">Header Dark 1</h4>
+          <h4 class="header-dark-2">Header Dark 2</h4>
+          <h4 class="header-dark-3">Header Dark 3</h4>
+          <h4 class="header-dark-4">Header Dark 4</h4>
+          <h4 class="header-dark-5">Header Dark 5</h4>
         </div>
       </div>
     </div>
